[package]
name = "nullfs"
version = "0.2.1"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
color-eyre = "0.6.5"
eyre = "0.6.12"
glob = "0.3.3"
hex = "0.4.3"
path-slash = "0.2.1"
reqwest = { version = "0.12.23", features = ["gzip", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version ="0.3.19", features = ["fmt", "std", "env-filter"] }
tracing-error = "0.2.1"
serde_yaml = "0.9.34"
indexmap = { version = "2.11.0", features = ["serde"] }
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
async-recursion = "1.1.1"
uuid = { version = "1.18.1", features = ["v4"] }
tokio-util = "0.7.16"
chrono = "0.4.42"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
rand = "0.9.2"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
tera = "1.20.0"
